Removed empty white space from the right edge of the page - The solution was copied from this Stackoverflow thread: https://stackoverflow.com/questions/4617872/white-space-showing-up-on-right-side-of-page-when-background-image-should-extend - This only hides the part that is extending over the page edges. Therefore, it does not solve the actual root cause   of the element extending over the edge in the first place. However, we shouldn't ever have an actual need for   extending elements over the edge, so it shouldn't matter using this kind of a solution

--- a/modules/avoindata-drupal-theme/less/overrides.less
+++ b/modules/avoindata-drupal-theme/less/overrides.less
@@ -37,8 +37,12 @@
 // Guide styles
 @import "guide.less";
 
-body {
+body, html {
+  width: 100%;
+  height: 100%;
   margin: 0px;
+  padding: 0px;
+  overflow-x: hidden; 
 }
 
 .main-container {
